correção de bugs

--- a/src/Signature.App/Components/Layout/NavMenu.razor
+++ b/src/Signature.App/Components/Layout/NavMenu.razor
@@ -8,7 +8,7 @@
 
             <div>
                 <button @onclick="VoltarParaPaginaAnterior" class="button is-inverted">
-                    <span class="icon">
+                    <span class="icon is-inverted">
                         <i class="fa-solid fa-arrow-left"></i>
                     </span>
                 </button>
