--- a/src/Signature.App/Components/Pages/EscolherFormaEnvioComprovante.razor
+++ b/src/Signature.App/Components/Pages/EscolherFormaEnvioComprovante.razor
@@ -24,7 +24,7 @@
                                 <span class="icon mr-4">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </span>
-                                Assinar Comprovante
+                                Assinar comprovante
                             </p>
                         </header>
                     </a>
@@ -36,7 +36,7 @@
                                 <span class="icon mr-4">
                                     <i class="fa-solid fa-image"></i>
                                 </span>
-                                Enviar Foto do Comprovante
+                                Enviar foto do comprovante
                             </p>
                         </header>
                     </a>
