--- a/src/Signature.App/Components/Pages/InformarResponsavelRetirada.razor
+++ b/src/Signature.App/Components/Pages/InformarResponsavelRetirada.razor
@@ -21,7 +21,7 @@
                     <a class="card" @onclick="NextPage">
                         <header class="card-header">
                             <p class="card-header-title" style="display:flex;justify-items:center">
-                                Retirado pelo Cliente
+                                Retirado pelo cliente
                             </p>
 
                         </header>
