--- a/src/Signature.App/Components/Pages/Inicio.razor
+++ b/src/Signature.App/Components/Pages/Inicio.razor
@@ -27,7 +27,7 @@
                                 <span class="icon mr-4">
                                     <i class="fa-solid fa-barcode"></i>
                                 </span>
-                                Escanear Código de Barras
+                                Escanear código de barras
                             </p>
                         </header>
                     </a>
@@ -39,7 +39,7 @@
                                 <span class="icon mr-4">
                                     <i class="fa-regular fa-keyboard"></i>
                                 </span>
-                                Digitar Código de Barras
+                                Digitar código de barras
                             </p>
                         </header>
                     </a>
